# kano-agent-backlog-skill

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  404.html  CHANGELOG.html  CHANGELOG.md  CNAME  CONTRIBUTING.html  CONTRIBUTING.md  Dockerfile.webview  MANIFEST.in  README.md  REFERENCE.html  SKILL.md  TESTING.md  VERSIONING.md  docker-compose.webview.yml  index.html  index.xml  pixi.toml  pyproject.toml  sitemap.xml
.githooks/: README.md  commit-msg  (+1 more)
src/cpp/: CMakeLists.txt  CMakePresets.json  build10_output.txt  build11_output.txt  build12_output.txt  build13_output.txt  build14_output.txt  build15_output.txt  build16_output.txt  build17_output.txt  build18_output.txt  build19_output.txt  build20_output.txt  build3.bat  build3_error.txt  build3_output.txt  build4_output.txt  build5_output.txt  build6_output.txt  build8_output.txt  build_output.txt  compile_commands.json  env.txt  env_18.txt  vcpkg.json
src/cpp/apps/kano_backlog_cli/: main.cpp
src/cpp/apps/kano_backlog_webview/: main.cpp
src/cpp/code/apps/kano_backlog_cli/: CMakeLists.txt  main.cpp
src/cpp/code/apps/kano_backlog_webview/: CMakeLists.txt  README.md  main.cpp
src/cpp/code/apps/kano_backlog_webview/assets/: backboard_app_js.hpp  backboard_css.hpp  index_html.hpp  kob_ui_js.hpp
src/cpp/code/systems/kano_backlog_core/: CMakeLists.txt
src/cpp/code/systems/kano_backlog_core/config/private/: config.cpp
src/cpp/code/systems/kano_backlog_core/config/public/kano/backlog_core/config/: config.hpp
src/cpp/code/systems/kano_backlog_core/diagnostics/public/kano/backlog_core/diagnostics/: mutation_timing.hpp
src/cpp/code/systems/kano_backlog_core/frontmatter/private/: canonical_store.cpp  frontmatter.cpp
src/cpp/code/systems/kano_backlog_core/frontmatter/public/kano/backlog_core/frontmatter/: canonical_store.hpp
src/cpp/code/systems/kano_backlog_core/models/private/: models.cpp
src/cpp/code/systems/kano_backlog_core/models/public/kano/backlog_core/models/: models.hpp
src/cpp/code/systems/kano_backlog_core/process/public/kano/backlog_core/process/: noninteractive_errors.hpp
src/cpp/code/systems/kano_backlog_core/refs/private/: ref_parser.cpp  ref_resolver.cpp
src/cpp/code/systems/kano_backlog_core/refs/public/kano/backlog_core/refs/: ref_parser.hpp  ref_resolver.hpp
src/cpp/code/systems/kano_backlog_core/state/private/: state_machine.cpp
src/cpp/code/systems/kano_backlog_core/validation/private/: validator.cpp
src/cpp/code/systems/kano_backlog_core/version/public/: version.hpp
src/cpp/code/systems/kano_backlog_ops/: CMakeLists.txt
src/cpp/code/systems/kano_backlog_ops/config/public/kano/backlog_ops/config/: config_ops.hpp
src/cpp/code/systems/kano_backlog_ops/doctor/private/: doctor_ops.cpp
src/cpp/code/systems/kano_backlog_ops/doctor/public/kano/backlog_ops/doctor/: doctor_ops.hpp
src/cpp/code/systems/kano_backlog_ops/index/private/: backlog_index.cpp
src/cpp/code/systems/kano_backlog_ops/index/public/kano/backlog_ops/index/: backlog_index.hpp
src/cpp/code/systems/kano_backlog_ops/integrity/private/: integrity_ops.cpp
src/cpp/code/systems/kano_backlog_ops/integrity/public/kano/backlog_ops/integrity/: integrity_ops.hpp
src/cpp/code/systems/kano_backlog_ops/migration/private/: migration_ops.cpp
src/cpp/code/systems/kano_backlog_ops/migration/public/kano/backlog_ops/migration/: migration_ops.hpp
src/cpp/code/systems/kano_backlog_ops/orchestration/private/: orchestration_ops.cpp
src/cpp/code/systems/kano_backlog_ops/orchestration/public/kano/backlog_ops/orchestration/: orchestration_ops.hpp
src/cpp/code/systems/kano_backlog_ops/relation/private/: relation_ops.cpp
src/cpp/code/systems/kano_backlog_ops/relation/public/kano/backlog_ops/relation/: relation_ops.hpp
src/cpp/code/systems/kano_backlog_ops/templates/private/: template_ops.cpp
src/cpp/code/systems/kano_backlog_ops/templates/public/kano/backlog_ops/templates/: template_ops.hpp
src/cpp/code/systems/kano_backlog_ops/topic/private/: topic_ops.cpp
src/cpp/code/systems/kano_backlog_ops/topic/public/kano/backlog_ops/topic/: topic_ops.hpp
src/cpp/code/systems/kano_backlog_ops/view/private/: view_ops.cpp
src/cpp/code/systems/kano_backlog_ops/view/public/kano/backlog_ops/view/: view_ops.hpp
src/cpp/code/systems/kano_backlog_ops/workitem/private/: workitem_ops.cpp
src/cpp/code/systems/kano_backlog_ops/workitem/public/kano/backlog_ops/workitem/: workitem_ops.hpp
src/cpp/code/systems/kano_backlog_ops/workset/private/: workset_ops.cpp
src/cpp/code/systems/kano_backlog_webview_core/: CMakeLists.txt
src/cpp/code/systems/kano_backlog_webview_core/private/: BacklogWebviewService.cpp
src/cpp/code/systems/kano_backlog_webview_core/public/: KanoBacklog.BacklogWebviewService.hpp
src/cpp/code/tests/: CMakeLists.txt  backlog_core_smoke_test.cpp  cli_quick_smoke_test.cpp  cli_repo_smoke_test.cpp  infra_config_smoke_test.cpp  integrity_ops_smoke_test.cpp  migration_ops_smoke_test.cpp  relation_ops_smoke_test.cpp  run_tests.sh  topic_ops_smoke_test.cpp  webview_service_smoke_test.cpp  workitem_ops_smoke_test.cpp
src/cpp/scripts/common/: bootstrap-common.sh  build_metadata.sh  env.sh  output-layout.sh  preset.sh  unix_preset_build.sh  windows_preset_build.sh  windows_preset_helper.ps1
src/cpp/scripts/linux/: ninja-gcc-debug.sh  ninja-gcc-release.sh  prerequisite_linux.sh
src/cpp/scripts/macos/: ninja-clang-x64-debug.sh  ninja-clang-x64-release.sh  prerequisite_macos.sh
src/cpp/scripts/windows/: ninja-msvc-debug.sh  ninja-msvc-release.sh  prerequisite_windows.sh
src/cpp/systems/backlog_adapters/fs/: filesystem.cpp  filesystem.hpp
src/cpp/systems/backlog_core/errors/: errors.hpp
src/cpp/systems/backlog_core/frontmatter/: parser.cpp  parser.hpp
src/cpp/systems/backlog_core/model/: backlog_item.hpp
src/cpp/systems/backlog_core/state/: state_machine.cpp  state_machine.hpp
src/cpp/systems/backlog_core/validation/: validator.cpp  validator.hpp
src/cpp/systems/backlog_ops/workitem/: workitem_ops.cpp  workitem_ops.hpp
src/cpp/tests/: backlog_core_smoke_test.cpp  workitem_ops_smoke_test.cpp
(+426 files in other folders)
