[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kano-agent-backlog-skill"
dynamic = ["version"]
description = "Local-first backlog system with audit trail for AI agent collaboration, including core domain library and CLI facade"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kano Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "python-frontmatter>=1.0.0,<2.0.0",
    "uuid6>=2024.1.12; python_version<'3.12'",
    "typer>=0.12,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "tomli>=2.0.0,<3.0.0; python_version<'3.11'",
    "tomli-w>=1.0.0,<2.0.0",
    "packaging>=20.0",
]

[project.urls]
Homepage = "https://github.com/kano-ai/kano-agent-backlog-skill"
Repository = "https://github.com/kano-ai/kano-agent-backlog-skill"
Documentation = "https://github.com/kano-ai/kano-agent-backlog-skill/tree/main/docs"
"Bug Tracker" = "https://github.com/kano-ai/kano-agent-backlog-skill/issues"
Changelog = "https://github.com/kano-ai/kano-agent-backlog-skill/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "hypothesis>=6.0.0,<7.0.0",
    "black>=23.0.0,<25.0.0",
    "isort>=5.0.0,<6.0.0",
    "mypy>=1.0.0,<2.0.0",
    "ruff>=0.1.0,<1.0.0",
]
vector = [
    "sentence-transformers>=2.0.0,<4.0.0",
    "numpy>=1.20.0,<2.0.0",
    "torch>=2.0.0,<3.0.0",
]

[project.scripts]
kano-backlog = "kano_backlog_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
# Automatically discover all packages under src/
# This will find: kano_backlog_core, kano_backlog_ops, kano_backlog_cli, sentence_transformers

[tool.setuptools.package-data]
# Include SQL schema files for database initialization
kano_backlog_core = ["schema/*.sql", "py.typed"]
# Include PEP 561 type marker files
kano_backlog_ops = ["py.typed"]
kano_backlog_cli = ["py.typed"]
# Include type stub files for sentence_transformers
sentence_transformers = ["*.pyi"]

[tool.setuptools.dynamic]
version = {attr = "kano_backlog_core.__version__.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-p no:cacheprovider"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
